# komple-framework

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md
contracts/attribute-permission/: Cargo.toml
contracts/attribute-permission/examples/: schema.rs
contracts/attribute-permission/src/: contract.rs  error.rs  msg.rs
contracts/attribute-permission/tests/: integration.rs
contracts/collection/: Cargo.toml
contracts/collection/examples/: schema.rs
contracts/collection/src/: contract.rs  msg.rs  state.rs  tests.rs
contracts/collection/tests/: merge_tests.rs
contracts/controller/: Cargo.toml
contracts/controller/examples/: schema.rs
contracts/controller/src/: contract.rs  contract_tests.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/controller/tests/: marketplace_tests.rs  merge_tests.rs  mint_tests.rs
contracts/fee/: Cargo.toml  README.md
contracts/fee/examples/: schema.rs
contracts/fee/src/: contract.rs  error.rs  helper.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/hub/: Cargo.toml
contracts/hub/examples/: schema.rs
contracts/hub/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/hub/tests/: integration.rs  merge_tests.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/examples/: schema.rs
contracts/marketplace/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/marketplace/tests/: integration.rs
contracts/merge/: Cargo.toml
contracts/merge/examples/: schema.rs
contracts/merge/src/: contract.rs  contract_tests.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/merge/tests/: integration.rs
contracts/metadata/: Cargo.toml
contracts/metadata/examples/: schema.rs
contracts/metadata/src/: contract.rs  contract_tests.rs  error.rs  helper.rs  msg.rs  state.rs  tests.rs
contracts/mint/: Cargo.toml
contracts/mint/examples/: schema.rs
contracts/mint/src/: contract.rs  contract_tests.rs  error.rs  helper.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/mint/tests/: fee_integration.rs  permission_integration.rs
contracts/minter/: Cargo.toml
contracts/minter/examples/: schema.rs
contracts/minter/src/: contract.rs  contract_tests.rs  error.rs  msg.rs  state.rs
contracts/modules/custom/: Cargo.toml  README.md
contracts/modules/fee/: Cargo.toml  README.md
contracts/modules/hub/: Cargo.toml  README.md
contracts/modules/hub/examples/: schema.rs
contracts/modules/hub/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/modules/hub/tests/: integration.rs
contracts/modules/marketplace/: Cargo.toml  README.md
contracts/modules/marketplace/examples/: schema.rs
contracts/modules/marketplace/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/modules/marketplace/tests/: cw20_integration.rs  integration.rs
contracts/modules/marketplace/tests/helpers/: mod.rs
contracts/modules/merge/: Cargo.toml  README.md
contracts/modules/merge/examples/: schema.rs
contracts/modules/merge/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/modules/merge/tests/: integration.rs
contracts/modules/metadata/: Cargo.toml  README.md
contracts/modules/mint/: Cargo.toml  README.md
contracts/modules/mint/examples/: schema.rs
contracts/modules/mint/src/: contract.rs  error.rs  helper.rs  msg.rs  state.rs  tests.rs
contracts/modules/mint/tests/: fee_integration.rs  integration.rs  permission_integration.rs  token_integration.rs  whitelist_integration.rs
contracts/modules/permission/: Cargo.toml  README.md
contracts/modules/permission/examples/: schema.rs
contracts/modules/permission/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/modules/permission/tests/: ownership_permission_integration.rs
contracts/modules/token/: Cargo.toml  README.md
contracts/modules/whitelist/: Cargo.toml  README.md
contracts/modules/whitelist/examples/: schema.rs
contracts/modules/whitelist/src/: contract.rs  error.rs  helper.rs  msg.rs  state.rs  tests.rs
contracts/ownership/: Cargo.toml
contracts/ownership-permission/: Cargo.toml
contracts/ownership-permission/examples/: schema.rs
contracts/ownership-permission/src/: contract.rs  error.rs  state.rs
contracts/ownership-permission/tests/: integration.rs
contracts/ownership/examples/: schema.rs
contracts/ownership/src/: contract.rs  state.rs
contracts/permission/: Cargo.toml
contracts/permission/examples/: schema.rs
contracts/permission/src/: contract.rs  contract_tests.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/permission/tests/: ownership_permission.rs  ownership_permission_integration.rs
contracts/permissions/attribute/: Cargo.toml  README.md
contracts/permissions/attribute/examples/: schema.rs
contracts/permissions/attribute/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/permissions/attribute/tests/: integration.rs
contracts/permissions/custom/: Cargo.toml  README.md
contracts/permissions/link/: Cargo.toml  README.md
contracts/permissions/link/examples/: schema.rs
contracts/permissions/link/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/permissions/link/tests/: integration.rs
contracts/permissions/ownership/: Cargo.toml  README.md
contracts/permissions/ownership-permission/: Cargo.toml
contracts/royalty/: Cargo.toml
contracts/token/: Cargo.toml
contracts/token/examples/: schema.rs
contracts/token/src/: contract.rs  contract_tests.rs  error.rs  helper.rs  msg.rs  state.rs  tests.rs
contracts/token/tests/: royalty_integration.rs  whitelist_integration.rs
contracts/whitelist/: Cargo.toml
modules/: README.md
modules/marketplace/: Cargo.toml
modules/merge/: Cargo.toml
modules/merge/src/: error.rs  (+4 more)
modules/mint/: Cargo.toml
modules/passcard/: Cargo.toml
modules/permission/: Cargo.toml
permissions/: Cargo.toml  README.md
permissions/passcard/: Cargo.toml
scripts/: generate_schemas.sh  optimize.sh  package.json  publish.sh  set_version.sh  ts-codegen.sh  tsCodegen.ts
scripts/generate-schema/: package.json
template/: Cargo.toml
template/examples/: schema.rs
(+125 files in other folders)
