[workspace]
members = ["contracts/*", "modules/*"]

[profile.release.package.token]
codegen-units = 1
incremental = false

[profile.release.package.controller]
codegen-units = 1
incremental = false

[profile.release.package.mint]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false