[package]
name = "komple-mint-module"
version = "0.0.1"
authors = ["findolor <16416963+findolor@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
semver = "1"
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0"
cosmwasm-schema = "1.1.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
komple-token-module = { path = "../token", features = ["library"] }
komple-permission-module = { path = "../permission", features = ["library"] }
cw-utils = "0.13.2"
komple-types = { path = "../../packages/types" }
komple-utils = { path = "../../packages/utils" }
cw721-base = { version = "0.15.0", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.13.2"
komple-metadata-module = { path = "../metadata", features = ["library"] }
komple-hub-module = { path = "../hub", features = ["library"] }
cw721 = "0.15.0"
komple-ownership-permission-module = { path = "../ownership-permission" }