[package]
name = "komple-framework-hub-module"
version = "0.0.1"
authors = ["findolor <findolor@komple.io>"]
edition = "2018"
description = "Contract used for module registry and address resolution in Komple Framework."
repository = "https://github.com/KompleTeam/komple-framework/tree/main/contracts/modules/hub"
homepage = "https://komple.io"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
semver = "1"
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0"
cosmwasm-schema = "1.1.0"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
thiserror = { version = "1.0.31" }
cw-utils = "0.15.1"
komple-types = { path = "../../../packages/types" }
komple-utils = { path = "../../../packages/utils", features = ["funds"] }

[dev-dependencies]
cw-multi-test = "0.15.1"
komple-framework-marketplace-module = { path = "../marketplace", features = ["library"]  }
komple-framework-merge-module = { path = "../merge", features = ["library"]  }
komple-permission-module = { path = "../permission", features = ["library"]  }
komple-mint-module = { path = "../mint", features = ["library"] }
komple-token-module = { path = "../token", features = ["library"] }
komple-metadata-module = { path = "../metadata", features = ["library"]  }
cw721 = "0.15.0"
cw721-base = { version = "0.15.0", features = ["library"] }
komple-ownership-permission-module = { path = "../../permissions/ownership", features = ["library"]  }
komple-framework-fee-module = { path = "../fee", features = ["library"]  }