[package]
name = "komple-framework-attribute-permission"
version = "1.0.0-beta"
authors = ["findolor <findolor@komple.io>"]
edition = "2018"
description = "Contract used for making attribute level comparisons and checks in Komple Framework."
repository = "https://github.com/KompleTeam/komple-framework/tree/main/contracts/permissions/attribute"
homepage = "https://komple.io"
license = "Apache-2.0"
documentation = "https://docs.komple.io/komple-framework/permissions/Attribute"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0"
cosmwasm-schema = "1.1.0"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
thiserror = { version = "1.0.31" }
komple-framework-types = "1.0.0-beta"
komple-framework-utils = { version = "1.0.0-beta", features = ["response", "storage"] }
komple-framework-metadata-module = { version = "1.0.0-beta", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.15.1"
komple-framework-permission-module = { path = "../../modules/permission", features = ["library"] }
komple-framework-token-module = { path = "../../modules/token", features = ["library"] }
komple-framework-mint-module = { path = "../../modules/mint", features = ["library"] }
komple-framework-hub-module = { path = "../../modules/hub", features = ["library"] }
